--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
                     <p>edu.denegri@gmail.com</p>
                 </div>
             </section>
+            <section class="seccion">Skills
+                <div class="descripcion">
+                    <p>HTML, CSS, Javascript, Responsive Web Design, Presentation, Technical Writing</p>
+                </div>
+            </section>
             <section class="seccion"> Educacion
                 <div class="Titulo">IFTS N°18</div>
                 <div class="descripcion"> Tecnicatura Superior en Desarrollo de
