--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curriculum Vitae</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     </style>
+    <link rel="icon" href="../../../Documents/HubSpot Brand Kit/Logo/PNG/main-logo.png" type="image/x-icon">
+    <!-- Título de la página -->
+  <meta property="og:title" content="Curriculum Vitae" />
+
+  <!-- Descripción de la página -->
+  <meta property="og:description" content="Esto es un curriculum vitae" />
+
+  <!-- URL de la página -->
+  <meta property="og:url" content="http://127.0.0.1:4200/single-pageCV-roadmap/index.html" />
+
+  <!-- Tipo de contenido (article, website, video, etc.) -->
+  <meta property="og:type" content="website" />
+
+  <!-- Nombre del sitio web -->
+  <meta property="og:site_name" content="Curriculum Vitae" />
+
+  <!-- Idioma del contenido -->
+  <meta property="og:locale" content="es_ES" />
 </head>
 
 <body>
